AWM-385 Added a few more examples of the Page Intro, fixed an issue where the background was displaying when there was no caption. Also adjusted the HTML so that the image would hold it's place while it loaded. Swapped out picsum for loremflicker due to loading issues.

--- a/web/themes/aphis/source/04-components/page-intro/_page-intro.scss
+++ b/web/themes/aphis/source/04-components/page-intro/_page-intro.scss
@@ -5,11 +5,15 @@
   figure {
     background: color(base-lightest);
     margin-bottom: rem(20);
+    // Prevent extra background if there's only an image
+    font-size: 0;
   }
 
   img {
     display: block;
     margin: 0 auto;
+    // for alt text
+    font-size: size('body', 1);
   }
 
   figcaption {
